# feed_reader

./: .gitignore  README.md
backend/: pyproject.toml
backend/backend/: Feed.py  app.py  main.py
frontend/: package.json
frontend/src/: App.vue  FirstColumn.vue
