[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dokosho02 <dokosho02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^6.0.11"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
